force-app/main/default/objects/CustomerOrders__c/CustomerOrders__c.object-meta.xml
<CustomObject>
    <label>Customer Order</label>
    <nameField>
        <label>Order_Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>