force-app/main/default/objects/CustomerOrders__c/fields/Order_Notes__c.field-meta.xml
<CustomField>
    <fullName>Order_Notes__c</fullName>
    <label>Order_Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>