force-app/main/default/objects/CustomerOrders__c/fields/Order_Total__c.field-meta.xml
<CustomField>
    <fullName>Order_Total__c</fullName>
    <label>Order Total</label>
    <summarizedField>Customer_Order_Line_Item__c.Total__c</summarizedField>
    <summaryForeignKey>Customer_Order_Line_Item__c.Customer_Order__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>