force-app/main/default/objects/CustomerOrders__c/fields/Order_Type__c.field-meta.xml
<CustomField>
    <fullName>Order_Type__c</fullName>
    <label>Order_Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>