force-app/main/default/objects/CustomerOrders__c/fields/Requested_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Requested_Delivery_Date__c</fullName>
    <label>Requested_Delivery_Date</label>
    <type>Date</type>
</CustomField>