force-app/main/default/objects/CustomerOrders__c/fields/Scheduled_Shipment_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Shipment_Date__c</fullName>
    <label>Scheduled_Shipment_Date</label>
    <type>Date</type>
</CustomField>