force-app/main/default/objects/CustomerOrders__c/fields/Shipping_Method__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Method__c</fullName>
    <label>Shipping_Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Overnight</fullName>
            </value>
            <value>
                <fullName>Ground</fullName>
            </value>
            <value>
                <fullName>Cold Chain Courier</fullName>
            </value>
            <value>
                <fullName>2 Day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>