force-app/main/default/objects/CustomerOrders__c/fields/Temperature_Controlled__c.field-meta.xml
<CustomField>
    <fullName>Temperature_Controlled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Temperature_Controlled</label>
    <type>Checkbox</type>
</CustomField>