force-app/main/default/objects/CustomerOrders__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Order_Number__c</columns>
    <columns>Order_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Order_Date__c</columns>
    <columns>Requested_Delivery_Date__c</columns>
    <columns>Scheduled_Shipment_Date__c</columns>
    <columns>Priority__c</columns>
    <columns>Shipping_Method__c</columns>
    <columns>Temperature_Controlled__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>